--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <footer>
         <div class="footer-content">
             <div class="social-link">
-                <a href="https://www.facebook.com/TheTechnoBuilders" target="_blank">Like & Follow <strong>The Techno Builders</strong></a>
+                <a href="https://www.facebook.com/TTBofficialpage" target="_blank">Like & Follow <strong>The Techno Builders</strong></a>
             </div>
             <div class="dev-credit">
                 Designed & Developed by <span class="dev-name">Earl Jensen Keith C. Jamon</span>
