--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <h1>Submission Received!</h1>
                 <p>Your data has been securely recorded for The Gear.</p>
                 
-                <a href="hhttps://www.facebook.com/TTBofficialpage" target="_blank" class="btn btn-facebook">
+                <a href="https://www.facebook.com/TTBofficialpage" target="_blank" class="btn btn-facebook">
                     👍 Follow The Techno Builders
                 </a>
 
